@@ -12,6 +12,7 @@
   <%= result %>
   <script>
     <%= JSLintMate.js %>
+    window.jslm.version.current = '<%= JSLintMate.version %>';
   </script>
 </body>
 </html>
